--- a/deliver_dish_frontend/restaurant-detail/restaurant-detail.html
+++ b/deliver_dish_frontend/restaurant-detail/restaurant-detail.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="home.html" class="back-btn">
+            <a href="../home/home.html" class="back-btn">
                 <i class="fas fa-arrow-left"></i> 返回首页
             </a>
             <h1>餐馆详情</h1>
