--- a/deliver_dish_frontend/home/home.html
+++ b/deliver_dish_frontend/home/home.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div class="header-content">
-        <div class="logo">美食送</div>
+        <div class="logo">软件园美食送</div>
         <div class="user-info">
           <span>欢迎，<span id="username">用户</span></span>
           <button class="btn btn-secondary" onclick="logout()">退出登录</button>
