--- a/deliver_dish_frontend/register/register.html
+++ b/deliver_dish_frontend/register/register.html
@@ -15,6 +15,7 @@
 	          <option value="">-- 请选择角色 --</option>
 	          <option value="customer">顾客</option>
 	          <option value="rider">骑手</option>
+			  <option value="owner">餐馆老板</option>
 	  </select>
       <button type="submit">注册</button>
     </form>
